@@ -1,3 +1,9 @@
+2009-05-04  Jeremy Cribb <jcribb@email.unc.edu>
+	* dmbr_relaxation_time.m: added handling of edge case to avoid error.
+	* dmbr_run.m: changed default analyses.
+	* dmbr_analysis_gui.fig: prettified gui for linux.
+	* dmbr_analysis_gui.m: prettified gui for linux.	
+
 2008-03-04  Jeremy Cribb <jcribb@email.unc.edu>
 	* dmbr_plot_data.m: added text annotations that indicate (S)tart and (E)nd points on the shear thinning curve (apparent viscosity vs. max shear rate)
 
